--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This package contains Matlab and R implementations of the algorithms proposed in "Drug susceptibility prediction against a panel of drugs using kernelized Bayesian multitask learning", which is appearing in Bioinformatics.
+This repository contains Matlab and R implementations of the algorithms proposed in "Drug susceptibility prediction against a panel of drugs using kernelized Bayesian multitask learning", which is appearing in Bioinformatics.
 
 demo_classification.m file shows how to use the classification algorithm in Matlab.
 demo_classification.R file shows how to use the classification algorithm in R.
@@ -16,6 +16,6 @@ KBMTL methods
 * kbmtl_semisupervised_regression_variational_train.R => training procedure for regression in R
 * kbmtl_semisupervised_regression_variational_test.R => test procedure for regression in R
 
-If you use any of the algorithms implemented in this package, please cite the following paper:
+If you use any of the algorithms implemented in this repository, please cite the following paper:
 
 Mehmet Gonen and Adam A. Margolin. Drug susceptibility prediction against a panel of drugs using kernelized Bayesian multitask learning. Bioinformatics, 30(17):i556-i563, 2014.
